# Deskible

./: .gitignore  CMakeLists.txt  CMakePresetsSettings.json  Deskible.iss  Deskible.pro  LICENSE  README.md  reset_project.bat
resources/: resources.qrc
src/: biblelocalreader.cpp  biblelocalreader.h  common.h  main.cpp  mainwindow.cpp  mainwindow.h  modernswitch.h  settingsdialog.cpp  settingsdialog.h  startupmanager.cpp  startupmanager.h  systemtraymanager.cpp  systemtraymanager.h
